--- a/src/components/bag/Bag.css
+++ b/src/components/bag/Bag.css
@@ -21,8 +21,108 @@
 
 }
 
-.bag__container p{
+.bag__container {
+  
     font-size:16px;
     color:gray;
     padding:5px;
+}
+
+.add__container > p{
+  text-align: center;
+}
+
+.item__container{
+    display:inline-flex;
+    width: 100%;
+    height:130px;
+    padding:10px;
+    margin-top:15px;
+}
+
+.bag__item__name{
+    font-size:12px;
+    padding-left:2px;
+    color:var(--text-color-black);
+    font-family: inherit;
+    margin:4px;
+}
+
+/* .list__item{
+   
+} */
+
+.item_per_price{
+    font-size:12px;
+    width: 100%;
+    float:inline-end;
+    height:40px;
+    font-family: inherit;
+    margin-bottom:5px;
+  
+}
+
+.item__price{
+    font-size:12px;
+    width: 35%;
+    font-family: inherit;
+    margin-left:4px;
+    color:#333;
+}
+
+.add__container{
+    border:1px solid blue;
+    width:20%;
+    margin-top:70px;
+    margin-left:20px;
+    
+}
+
+.item__slashed{
+    width: 45%;
+    height:30px;
+    font-family: inherit;
+   text-decoration: line-through;
+}
+
+.total__container{
+    /* border:1px solid blue; */
+    border-top:1px solid gray;
+    width:100%;
+    padding:5px;
+
+}
+.total__container >div{
+    width:100%;
+    border-top:1px dashed gray;
+}
+
+.subtotal{
+    display: flex;
+    justify-content: space-around;
+    position:relative;
+    padding-left:0px;
+    width:100%;
+    margin:5px;
+    font-weight:bold;
+}
+
+.inclusive{
+    display: inline-flex;
+color:gray;
+left:2px;
+}
+
+.subtotal .subtotal__span{
+    color:gray;
+    font-weight:lighter;
+}
+.delivery__span{
+    color:rgb(10, 207, 10);
+    font-weight:bold;
+}
+
+.conclusion{
+    color:rgb(10, 207, 10);
+    font-weight:bold;
 }
