--- a/src/components/Screen/ProductDetails.css
+++ b/src/components/Screen/ProductDetails.css
@@ -77,6 +77,7 @@ padding-bottom:5px;
 
 .add__container .btn-add{
     width:18px;
+    padding-top:1px;
     font-size:20px;
     background-color:rgb(208, 215, 231);
     color:var(--primary-color);
