--- a/src/components/bag-full/BagFull.css
+++ b/src/components/bag-full/BagFull.css
@@ -23,7 +23,7 @@
     height: 100vh;
     overflow: hidden;
     margin: 0;
-    ;
+    
 }
 .account__setup{
   position: relative;
@@ -31,8 +31,11 @@
     height: 100%;
 }
 
-.bag__side{
-  border:1px solid #2243
+.bag_side{
+  position:absolute;
+  top:10px;
+  left:920px;
+  
 }
   
   
